--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,14 +27,8 @@
         "baseUrl": ".",
         "skipLibCheck": true,
         "paths": {
-            "*": [
-                "node_modules/*",
-                "src/types/*",
-            ]
+            "*": ["node_modules/*", "src/types/*"]
         }
     },
-    "include": [
-        "src/**/*",
-        "index.ts"
-    ]
+    "include": ["src/**/*", "index.ts"]
 }
