--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Generate verifiable credentials using a job queue",
     "main": "dist/index.js",
     "type": "dist/index.d.ts",
-    "author": "Radical Ledger Technolgoies",
+    "author": "Radical Ledger Technologies",
     "license": "MIT",
     "scripts": {
         "build": "rimraf dist && tsc && cpx src/types/* dist/src/types",
@@ -26,14 +26,15 @@
         "@types/jest": "^29.5.12",
         "@types/node": "^20.12.7",
         "cpx": "^1.5.0",
+        "husky": "^8.0.3",
         "jest": "^29.7.0",
+        "lint-staged": "^13.2.0",
+        "lodash": "^4.17.21",
+        "prettier": "^2.8.4",
         "rimraf": "^5.0.5",
         "ts-jest": "^29.1.2",
         "tsc": "^2.0.4",
-        "typescript": "^5.4.5",
-        "lint-staged": "^13.2.0",
-        "prettier": "^2.8.4",
-        "husky": "^8.0.3"
+        "typescript": "^5.4.5"
     },
     "dependencies": {
         "bullmq": "^5.7.4",
